--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,14 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<title>React App</title>
