--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+		<link rel="icon" type="image/png" href="/assets/favicon/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -24,7 +25,7 @@
 		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-		<title>React App</title>
+		<title>QR-Eceipts</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
